--- a/index.html
+++ b/index.html
@@ -7,40 +7,45 @@
 </head>
 <body>
 
-<header>
-	<div id="logo">
-		<h1>Mario Melchor</h1>
-	</div>
-	<nav>
-		<ul>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Portfolio</a></li>
-			<li><a href="#">Contact</a></li>
-		</ul>
-	</nav>
-</header>
+<header class="site-header">
+	<div class="container">
+		<div class="logo">
+			<h1>Mario Melchor</h1>
+		</div><!-- /.logo -->
+		<nav class="main-navigation">
+			<ul>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Portfolio</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+		</nav><!-- /.main-navigation -->
+	</div><!-- /.container -->
+</header><!-- /.site-header -->
 
 <div class="container">
-	<main>
-		<h2>About Me</h2>
-		<img src="" alt="">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique optio illo, facilis beatae magnam consequuntur provident culpa praesentium. Ipsa ipsam aspernatur, excepturi voluptates repudiandae sapiente nulla velit perferendis assumenda! Saepe!</p>
+	<main class="main-section">
+		<div class="section-content">
+			<h2>About Me</h2>
+			<img src="http://via.placeholder.com/200x200" alt="Mario Melchor" class="img-left">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique optio illo, facilis beatae magnam consequuntur provident culpa praesentium. Ipsa ipsam aspernatur, excepturi voluptates repudiandae sapiente nulla velit perferendis assumenda! Saepe!</p>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore dolores pariatur dolor voluptate ea, iste voluptatem non possimus, nobis corporis porro quisquam nam sint ad delectus natus, atque nostrum sed.</p>
-	</main>
-	<aside>
-		<h6>Connect with Me</h6>
-		<ul>
-			<li><a href="#">Github</a></li>
-			<li><a href="#">LinkedIn</a></li>
-			<li><a href="#">StackOverflow</a></li>
-		</ul>
-	</aside>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore dolores pariatur dolor voluptate ea, iste voluptatem non possimus, nobis corporis porro quisquam nam sint ad delectus natus, atque nostrum sed.</p>
+		</div><!-- /.section-content -->
+	</main><!-- /.main-section -->
+	<aside class="aside-section">
+		<div class="section-content">
+			<h6>Connect with Me</h6>
+			<ul>
+				<li><a href="#">Github</a></li>
+				<li><a href="#">LinkedIn</a></li>
+				<li><a href="#">StackOverflow</a></li>
+			</ul>
+		</div><!-- /.section-content -->
+	</aside><!-- /.aside-section -->
 </div><!-- /.container -->
 
-<footer>
+<footer class="site-footer">
 	&copy; Copyright 2017 Mario Melchor
-</footer>
-
+</footer><!-- /.site-footer -->
 </body>
 </html>
