Added fixed footer

--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@
 <div class="container">
 	<main class="main-section">
 		<div class="section-content">
-			<h2>About Me</h2>
+			<h2 class="header-border">About Me</h2>
 			<img src="http://via.placeholder.com/200x200" alt="Mario Melchor" class="img-left">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique optio illo, facilis beatae magnam consequuntur provident culpa praesentium. Ipsa ipsam aspernatur, excepturi voluptates repudiandae sapiente nulla velit perferendis assumenda! Saepe!</p>
 
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore dolores pariatur dolor voluptate ea, iste voluptatem non possimus, nobis corporis porro quisquam nam sint ad delectus natus, atque nostrum sed.</p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore dolores pariatur dolor voluptate ea, iste voluptatem non possimus, nobis corporis porro quisquam nam sint ad delectus natus, atque nostrum sed.</p>
 		</div><!-- /.section-content -->
 	</main><!-- /.main-section -->
 	<aside class="aside-section">
 		<div class="section-content">
-			<h6>Connect with Me</h6>
+			<h6 class="header-border">Connect with Me</h6>
 			<ul>
 				<li><a href="#">Github</a></li>
 				<li><a href="#">LinkedIn</a></li>
@@ -45,7 +46,7 @@
 </div><!-- /.container -->
 
 <footer class="site-footer">
-	&copy; Copyright 2017 Mario Melchor
+	<div class="copyright">&copy; Copyright 2017 Mario Melchor</div>
 </footer><!-- /.site-footer -->
 </body>
 </html>
