--- a/index.html
+++ b/index.html
@@ -14,39 +14,53 @@
 		</div><!-- /.logo -->
 		<nav class="main-navigation">
 			<ul>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Portfolio</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="portfolio.html">Portfolio</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav><!-- /.main-navigation -->
 	</div><!-- /.container -->
 </header><!-- /.site-header -->
 
 <div class="container">
+
 	<main class="main-section">
 		<div class="section-content">
-			<h2 class="header-border">About Me</h2>
+			<header class="page-header">
+				<h2 class="header-border">About Me</h2>
+			</header><!-- /.page-header -->
+
 			<img src="http://via.placeholder.com/200x200" alt="Mario Melchor" class="img-left">
+
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique optio illo, facilis beatae magnam consequuntur provident culpa praesentium. Ipsa ipsam aspernatur, excepturi voluptates repudiandae sapiente nulla velit perferendis assumenda! Saepe!</p>
 
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore dolores pariatur dolor voluptate ea, iste voluptatem non possimus, nobis corporis porro quisquam nam sint ad delectus natus, atque nostrum sed.</p>
+
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore dolores pariatur dolor voluptate ea, iste voluptatem non possimus, nobis corporis porro quisquam nam sint ad delectus natus, atque nostrum sed.</p>
+
 		</div><!-- /.section-content -->
 	</main><!-- /.main-section -->
+
 	<aside class="aside-section">
 		<div class="section-content">
-			<h6 class="header-border">Connect with Me</h6>
-			<ul>
-				<li><a href="#">Github</a></li>
-				<li><a href="#">LinkedIn</a></li>
-				<li><a href="#">StackOverflow</a></li>
-			</ul>
+			<header class="sub-header">
+				<h6>Connect with Me</h6>
+			</header><!-- /.sub-header -->
+
+			<ul class="social-links">
+				<li><a href="https://github.com/mariomelchor"><img src="assets/images/icon-github.png" alt="Github"></a></li>
+				<li><a href="https://www.linkedin.com/in/mario-melchor-a1a650139/"><img src="assets/images/icon-linkedin.png" alt="Linkedin"></a></li>
+				<li><a href="https://stackoverflow.com/users/7859878/mario-melchor?tab=profile"><img src="assets/images/icon-stack-overflow.png" alt="Stack Overflow"></a></li>
+			</ul><!-- /.social-links -->
+
 		</div><!-- /.section-content -->
 	</aside><!-- /.aside-section -->
+
 </div><!-- /.container -->
 
 <footer class="site-footer">
-	<div class="copyright">&copy; Copyright 2017 Mario Melchor</div>
+	<div class="copyright">&copy; Copyright 2017 Mario Melchor</div><!-- /.copyright -->
 </footer><!-- /.site-footer -->
+
 </body>
 </html>
