--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</div><!-- /.logo -->
 		<nav class="main-navigation">
 			<ul>
-				<li><a href="about.html">About</a></li>
+				<li><a href="index.html">About</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
