--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,29 @@
 				<h2 class="header-border">Portfolio</h2>
 			</header><!-- /.page-header -->
 
+			<div class="portfolio-items">
+				<div class="portfolio-item">
+					<img src="http://via.placeholder.com/300x200" alt="">
+					<div class="portfolio-title">Hangman</div>
+				</div><!-- /.portfolio-item -->
+				<div class="portfolio-item">
+					<img src="http://via.placeholder.com/300x200" alt="">
+					<div class="portfolio-title">RPG Game</div>
+				</div><!-- /.portfolio-item -->
+				<div class="portfolio-item">
+					<img src="http://via.placeholder.com/300x200" alt="">
+					<div class="portfolio-title">Trivia Game</div>
+				</div><!-- /.portfolio-item -->
+				<div class="portfolio-item">
+					<img src="http://via.placeholder.com/300x200" alt="">
+					<div class="portfolio-title">Rutgers Info Widget</div>
+				</div><!-- /.portfolio-item -->
+				<div class="portfolio-item">
+					<img src="http://via.placeholder.com/300x200" alt="">
+					<div class="portfolio-title">Rock Paper Scissors</div>
+				</div><!-- /.portfolio-item -->
+			</div><!-- /.portfolio-items -->
+
 		</div><!-- /.section-content -->
 	</main><!-- /.main-section -->
 
