Changed div to section tags

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
 	</main><!-- /.main-section -->
 
 	<aside class="aside-section">
-		<div class="section-content">
+		<section class="section-content">
 			<header class="sub-header">
 				<h6>Connect with Me</h6>
 			</header><!-- /.sub-header -->
@@ -68,7 +68,7 @@
 				<li><a href="https://stackoverflow.com/users/7859878/mario-melchor?tab=profile"><img src="assets/images/icon-stack-overflow.png" alt="Stack Overflow"></a></li>
 			</ul><!-- /.social-links -->
 
-		</div><!-- /.section-content -->
+		</section><!-- /.section-content -->
 	</aside><!-- /.aside-section -->
 
 </div><!-- /.container -->
