--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 <div class="container">
 
 	<main class="main-section">
-		<div class="section-content">
+		<section class="section-content">
 			<header class="page-header">
 				<h2>Contact</h2>
 			</header><!-- /.page-header -->
@@ -46,7 +46,7 @@
 				<input id="submit" name="submit" type="submit">
 			</form>
 
-		</div><!-- /.section-content -->
+		</section><!-- /.section-content -->
 	</main><!-- /.main-section -->
 
 	<aside class="aside-section">
