--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="container">
 
 	<main class="main-section">
-		<div class="section-content">
+		<section class="section-content">
 			<header class="page-header">
 				<h2 class="header-border">About Me</h2>
 			</header><!-- /.page-header -->
@@ -40,7 +40,7 @@
 
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore dolores pariatur dolor voluptate ea, iste voluptatem non possimus, nobis corporis porro quisquam nam sint ad delectus natus, atque nostrum sed.</p>
 
-		</div><!-- /.section-content -->
+		</section><!-- /.section-content -->
 	</main><!-- /.main-section -->
 
 	<aside class="aside-section">
