Added portfolio columns css, css/html corrections

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Basic Portfolio</title>
+	<title>Basic Portfolio - Mario Melchor</title>
 	<link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -10,8 +10,9 @@
 <header class="site-header">
 	<div class="container">
 		<div class="logo">
-			<h1>Mario Melchor</h1>
+			<h1><a href="index.html">Mario Melchor</a></h1>
 		</div><!-- /.logo -->
+
 		<nav class="main-navigation">
 			<ul>
 				<li><a href="index.html">About</a></li>
@@ -19,6 +20,7 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav><!-- /.main-navigation -->
+
 	</div><!-- /.container -->
 </header><!-- /.site-header -->
 
@@ -40,7 +42,7 @@
 					<input id="email" name="email" type="email" placeholder="example@gmail.com">
 				</div><!-- /.form-group -->
 				<div class="form-group">
-					<label for="email">Message</label>
+					<label for="message">Message</label>
 					<textarea name="message" id="message" cols="30" rows="10"></textarea>
 				</div><!-- /.form-group -->
 				<input id="submit" name="submit" type="submit">
@@ -52,7 +54,7 @@
 	<aside class="aside-section">
 		<div class="section-content">
 			<header class="sub-header">
-				<h6>Connect with Me</h6>
+				<h4>Connect with Me</h4>
 			</header><!-- /.sub-header -->
 
 			<ul class="social-links">
