--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Basic Portfolio</title>
+	<title>Basic Portfolio - Mario Melchor</title>
 	<link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -10,7 +10,7 @@
 <header class="site-header">
 	<div class="container">
 		<div class="logo">
-			<h1>Mario Melchor</h1>
+			<h1><a href="index.html">Mario Melchor</a></h1>
 		</div><!-- /.logo -->
 
 		<nav class="main-navigation">
@@ -46,7 +46,7 @@
 	<aside class="aside-section">
 		<div class="section-content">
 			<header class="sub-header">
-				<h6>Connect with Me</h6>
+				<h4>Connect with Me</h4>
 			</header><!-- /.sub-header -->
 
 			<ul class="social-links">
