--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Basic Portfolio</title>
+	<title>Basic Portfolio - Mario Melchor</title>
 	<link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -10,8 +10,9 @@
 <header class="site-header">
 	<div class="container">
 		<div class="logo">
-			<h1>Mario Melchor</h1>
+			<h1><a href="index.html">Mario Melchor</a></h1>
 		</div><!-- /.logo -->
+
 		<nav class="main-navigation">
 			<ul>
 				<li><a href="index.html">About</a></li>
@@ -19,18 +20,19 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav><!-- /.main-navigation -->
+
 	</div><!-- /.container -->
 </header><!-- /.site-header -->
 
 <div class="container">
 
 	<main class="main-section">
-		<div class="section-content">
+		<section class="section-content">
 			<header class="page-header">
 				<h2 class="header-border">Portfolio</h2>
 			</header><!-- /.page-header -->
 
-			<div class="portfolio-items">
+			<div class="portfolio-items clearfix">
 				<div class="portfolio-item">
 					<img src="http://via.placeholder.com/300x200" alt="">
 					<div class="portfolio-title">Hangman</div>
@@ -53,13 +55,13 @@
 				</div><!-- /.portfolio-item -->
 			</div><!-- /.portfolio-items -->
 
-		</div><!-- /.section-content -->
+		</section><!-- /.section-content -->
 	</main><!-- /.main-section -->
 
 	<aside class="aside-section">
-		<section class="section-content">
+		<div class="section-content">
 			<header class="sub-header">
-				<h6>Connect with Me</h6>
+				<h4>Connect with Me</h4>
 			</header><!-- /.sub-header -->
 
 			<ul class="social-links">
@@ -68,7 +70,7 @@
 				<li><a href="https://stackoverflow.com/users/7859878/mario-melchor?tab=profile"><img src="assets/images/icon-stack-overflow.png" alt="Stack Overflow"></a></li>
 			</ul><!-- /.social-links -->
 
-		</section><!-- /.section-content -->
+		</div><!-- /.section-content -->
 	</aside><!-- /.aside-section -->
 
 </div><!-- /.container -->
