Added portfolio images

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,29 +29,39 @@
 	<main class="main-section">
 		<section class="section-content">
 			<header class="page-header">
-				<h2 class="header-border">Portfolio</h2>
+				<h2>Portfolio</h2>
 			</header><!-- /.page-header -->
 
 			<div class="portfolio-items clearfix">
 				<div class="portfolio-item">
-					<img src="http://via.placeholder.com/300x200" alt="">
-					<div class="portfolio-title">Hangman</div>
+					<a href="http://anchormaninc.com">
+						<img src="assets/images/anchorman.png" alt="">
+						<div class="portfolio-title">Anchorman</div>
+					</a>
 				</div><!-- /.portfolio-item -->
 				<div class="portfolio-item">
-					<img src="http://via.placeholder.com/300x200" alt="">
-					<div class="portfolio-title">RPG Game</div>
+					<a href="http://goclc.com">
+						<img src="assets/images/goclc.jpg" alt="GoCLC">
+						<div class="portfolio-title">GoCLC</div>
+					</a>
 				</div><!-- /.portfolio-item -->
 				<div class="portfolio-item">
-					<img src="http://via.placeholder.com/300x200" alt="">
-					<div class="portfolio-title">Trivia Game</div>
+					<a href="http://hppolice.org">
+						<img src="assets/images/hppd.jpg" alt="HPPD">
+						<div class="portfolio-title">HPPD</div>
+					</a>
 				</div><!-- /.portfolio-item -->
 				<div class="portfolio-item">
-					<img src="http://via.placeholder.com/300x200" alt="">
-					<div class="portfolio-title">Rutgers Info Widget</div>
+					<a href="http://lachiefs.com">
+						<img src="assets/images/lachiefs.jpg" alt="LA Chiefs">
+						<div class="portfolio-title">LA Chiefs</div>
+					</a>
 				</div><!-- /.portfolio-item -->
 				<div class="portfolio-item">
-					<img src="http://via.placeholder.com/300x200" alt="">
-					<div class="portfolio-title">Rock Paper Scissors</div>
+					<a href="http://rbs-na.com">
+						<img src="assets/images/rbs.jpg" alt="RBS">
+						<div class="portfolio-title">RBS</div>
+					</a>
 				</div><!-- /.portfolio-item -->
 			</div><!-- /.portfolio-items -->
 
