--- a/index.html
+++ b/index.html
@@ -29,16 +29,14 @@
 	<main class="main-section">
 		<section class="section-content">
 			<header class="page-header">
-				<h2 class="header-border">About Me</h2>
+				<h2>About Me</h2>
 			</header><!-- /.page-header -->
 
-			<img src="http://via.placeholder.com/200x200" alt="Mario Melchor" class="img-left">
+			<img src="assets/images/profile-pic.png" alt="Mario Melchor" class="img-left" width="200" height="280">
 
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique optio illo, facilis beatae magnam consequuntur provident culpa praesentium. Ipsa ipsam aspernatur, excepturi voluptates repudiandae sapiente nulla velit perferendis assumenda! Saepe!</p>
+			<p>I’m a web designer/front end developer living in Santa Ana, California. I am currently working for <a href="http://dhali.com" target="_blank">Dhali</a>, a Web Design company in Rancho Santa Margarita. I started working for Dhali on May 2005 before that I was attending <a href="https://www.artinstitutes.edu/orange-county" target="_blank">The Art Institute of California – Orange County</a> from October 2002 through December 2004 where I received an Associates of Science Degree in Interactive Media Design.<p>
 
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore dolores pariatur dolor voluptate ea, iste voluptatem non possimus, nobis corporis porro quisquam nam sint ad delectus natus, atque nostrum sed.</p>
-
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore dolores pariatur dolor voluptate ea, iste voluptatem non possimus, nobis corporis porro quisquam nam sint ad delectus natus, atque nostrum sed.</p>
+			<p>Building websites is what I love doing and I don't see myself doing anything else. Web Development is constantly evolving which in turn challenges you to improve your skills and learn new ones as well, that is one of the reasons why its such a great industry as you're always learning new tools and programming languages. </p>
 
 		</section><!-- /.section-content -->
 	</main><!-- /.main-section -->
